fix body width so images stop stretching

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -14,8 +14,8 @@ html {
   margin-top: 75px;
 
   body {
-    margin-left: 10%;
-    margin-right: 10%;
+    margin: auto;
+    width: 1500px;
 
     .login-header {
       width: 300px;
